infrastructure/base/ingress/stage-2/cloudflare-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-gateway
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    goldilocks.fairwinds.com/enabled: "true"
